# Prometheus-

./: .gitignore  CONTRIBUTING.md  LICENSE  PROMETHEUS.md  README.md  TODO.md  pyproject.toml
.githooks/: pre-commit
config/: prometheus.yaml  prometheus.yaml.default
docs/: PROMETHEUS-FULL.md
scripts/: daemon.py  health_check.sh  prometheus.service  run_nightly_evals.py  smoke_test_tool_calling.py  start.sh
skills/: adversarial-review.md  agent-behavioral-rules.md  agent-delegation.md  agentic-actions-audit.md  ai-security-assessment.md  algorithmic-art.md  anti-over-engineering.md  api-design-review.md  arxiv.md  ascii-art.md  audit-context-building.md  batch.md  brainstorming.md  canvas-design.md  claude-api.md  codebase-inspection.md  coding-agent-standards.md  composition-patterns.md  dependency-audit.md  differential-security-review.md  discord.md  dispatching-parallel-agents.md  doc-coauthoring.md  docx.md  excalidraw.md  find-nearby.md  finishing-development-branch.md  frontend-design.md  gh-issues.md  git-worktrees.md  github-auth.md  github-code-review.md  github-issues.md  github-pr-workflow.md  github-repo-management.md  gog.md  google-workspace.md  himalaya-email.md  insecure-defaults.md  internal-comms.md  (+52 more)
templates/: AGENTS.md.template  SOUL.md.template
tests/: test_adapter.py  test_adapter_tiers.py  test_adaptive_strictness.py  test_anatomy.py  test_approval_queue.py  test_audit.py  test_benchmarks.py  test_bootstrap.py  test_clean_slate.py  test_cloud_providers.py  test_compression_upgrade.py  test_config_env.py  test_context.py  test_doctor.py  (+50 more)
(+200 files in other folders)
